# medical_electronic_system

./: .gitignore  README.md  alembic.ini  create_dummy_patients.py  create_test_data.py  migrate.py  pyproject.toml  settings.py  setup.bat  setup_db.py  setup_duckdb.py  system_prompt.txt
.github/workflows/: ci.yml
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0001_initial.py
src/: dependencies.py  main.py
src/data_access/: addresses.py  ai_requests.py  ai_responses.py  base.py  db_storage.py  interfaces.py  medical_check_items.py  medical_check_templates.py  medical_check_types.py  medical_checks.py  patients.py  voice_recordings.py
src/db_migrations/: 0001_baseline.py  0001_baseline.sql  0002_ai_requests.py  0003_ai_responses.py  0004_patient_notes.py  0005_medical_check_attachments.py  0006_voice_recordings.py  setup.py  setup_duckdb.py  utils.py
src/models/: address.py  address_utils.py  ai_request.py  ai_response.py  allergy.py  enums.py  medical_check.py  medical_check_item.py  medical_check_template.py  medical_check_type.py  patient.py  patient_address.py
src/routes/: admin.py  medical_check_templates.py  medical_check_types.py  medical_checks.py  patients.py  root.py
src/services/: ai_service.py  mock_ai_service.py
src/static/: app.js  index.html  (+1 more)
tests/: conftest.py  test_address_integration.py  test_ai_button_integration.py  test_ai_htmx.py  test_ai_service.py  test_ai_service_attachments.py  test_attachments.py  test_chartable_options_integration.py  test_generic_template_integration.py  test_generic_template_more_integration.py  test_generic_templates_integration.py  test_medical_check_details_integration.py  test_medical_check_templates_edit_integration.py  test_medical_check_types_edit_integration.py  test_medical_checks_additional_integration.py  test_medical_checks_coverage.py  test_mock_ai_service.py  test_parsed_content.py  test_patient_details_integration.py  test_patient_notes.py  test_patients_coverage.py  test_patients_integration.py  test_pdf_ai_service.py  test_physicals_new_integration.py  test_templates_coverage.py  test_timeseries_integration.py
(+25 files in other folders)
