[project]
name = "medical-electronic-system"
version = "0.1.0"
description = "UK GP Medical Records System"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "duckdb",
    "python-multipart",
    "jinja2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Code formatting and linting configuration
[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
