[project]
name = "medical-electronic-system"
version = "0.1.0"
description = "UK GP Medical Records System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "dotenv",
    "openai",
]

[dependency-groups]
dev = [
    "faker",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Code formatting and linting configuration
[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
