[project]
name = "medical-electronic-system"
version = "0.1.0"
description = "UK GP Medical Records System"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "pydantic",
    "pydantic-settings",
    "dotenv",
    "openai",
]

[dependency-groups]
dev = [
    "faker",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Code formatting and linting configuration
[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
mypy_path = "."
explicit_package_bases = true
